gccida/g2/init_expr_once
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expr_once/src/expr.c:686:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)v1[2]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expr_once/src/expr.c:703:37: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( v5, ( machine_mode)v4) ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expr_once/src/expr.c:705:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)v4, v5); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_expr_once/src/obj/expr.o] Error 1
